Fix Recaps sidebar icon alignment

--- a/webapp/channels/src/components/recaps_link/recaps_link.scss
+++ b/webapp/channels/src/components/recaps_link/recaps_link.scss
@@ -44,6 +44,10 @@
             margin-right: 4px;
             font-size: 18px;
             opacity: 0.64;
+
+            svg {
+                display: block;
+            }
         }
 
         .SidebarChannelLinkLabel_wrapper {
